--- a/Sites/site 2/#source/style.scss
+++ b/Sites/site 2/#source/style.scss
@@ -7,7 +7,7 @@
    grid-template-columns: repeat(3, 1fr);
    overflow: hidden;
    >div{
-      width: 700px;
+      width: 50vw;
       background-color: #333;
       position: relative;
       left: -50%;
@@ -20,7 +20,8 @@
          z-index: 1;
       }
       &:nth-child(3){
-         width: 70vw;
+         max-width: 100vw;
+         min-width: 40vw;
          left: -120%;
          background: url('https://planetofhotels.com/guide/sites/default/files/styles/node__blog_post__bp_banner/public/2020-06/Exotic-tropical-beach-sunse.jpg') 100% 100% / cover;
          transition: all 0.18s ease-in-out;
