--- a/Sites/site 2/#source/style.scss
+++ b/Sites/site 2/#source/style.scss
@@ -2,27 +2,27 @@
  @import "nullstyle.scss";
 
  .block{
-   height: 60vh;
+   height: 500px;
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    overflow: hidden;
    >div{
-      width: 50vw;
+      width: 700px;
       background-color: #333;
       position: relative;
       left: -50%;
       &:nth-child(2){
          position: relative;
          left: -100%;
-         background-color: white;
+         background-color: rgb(255, 255, 255);
          clip-path: polygon(75% 0%, 100% 50%, 75% 100%, 0% 100%, 25% 50%, 0% 0%);
          width: 700px;
          z-index: 1;
       }
       &:nth-child(3){
-         max-width: 100vw;
-         min-width: 40vw;
-         left: -120%;
+         width: 104vw;
+         left: -130%;
+         max-width: 800px;
          background: url('https://planetofhotels.com/guide/sites/default/files/styles/node__blog_post__bp_banner/public/2020-06/Exotic-tropical-beach-sunse.jpg') 100% 100% / cover;
          transition: all 0.18s ease-in-out;
       }
