--- a/Sites/site 2/#source/style.scss
+++ b/Sites/site 2/#source/style.scss
@@ -29,3 +29,13 @@
       }
    }
  }
+ .line{
+   top: 6%;
+   height: 50%;
+   right: 35%;
+   width: 2px;
+   background-color: white;
+   position: absolute;
+   transform: rotate(-45deg);
+   
+ }
