--- a/Sites/site 2/css/style.css
+++ b/Sites/site 2/css/style.css
@@ -101,3 +101,13 @@ h1, h2, h3, h4, h5, h6 {
   transition: all 0.18s ease-in-out;
   z-index: 0;
 }
+
+.line {
+  top: 6%;
+  height: 50%;
+  right: 35%;
+  width: 2px;
+  background-color: white;
+  position: absolute;
+  transform: rotate(-45deg);
+}
