--- a/Sites/site 2/#source/style.scss
+++ b/Sites/site 2/#source/style.scss
@@ -6,6 +6,7 @@
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    overflow: hidden;
+   outline: 1px solid red;
    >div{
       width: 700px;
       background-color: #333;
@@ -13,7 +14,6 @@
       left: -50%;
       z-index: 1;
       &:nth-child(2){
-         position: relative;
          left: -100%;
          background-color: rgb(255, 255, 255);
          clip-path: polygon(65% 0%, 100% 50%, 65% 100%, 0% 100%, 35% 50%, 0% 0%);
@@ -21,14 +21,21 @@
          z-index: 2;
       }
       &:nth-child(3){
-         width: 104vw;
-         left: -130%;
-         background: url('https://planetofhotels.com/guide/sites/default/files/styles/node__blog_post__bp_banner/public/2020-06/Exotic-tropical-beach-sunse.jpg') 100% 100% / cover;
+         width: 80vw;
+         left: -102%;
+         background: url('https://planetofhotels.com/guide/sites/default/files/styles/node__blog_post__bp_banner/public/2020-06/Exotic-tropical-beach-sunse.jpg') 100% 50% / cover;
          transition: all 0.18s ease-in-out;
          z-index: 0;
       }
    }
  }
+ 
+ @media (max-width: 1160px){
+   .block > div:nth-child(3){
+      left: -130%;
+   }
+}
+
  .line{
    top: 6%;
    height: 50%;
@@ -36,6 +43,7 @@
    width: 2px;
    background-color: white;
    position: absolute;
-   transform: rotate(-45deg);
-   
+   transform: rotate(-45deg); 
  }
+
+
