--- a/Sites/site 2/css/style.css
+++ b/Sites/site 2/css/style.css
@@ -77,6 +77,7 @@ h1, h2, h3, h4, h5, h6 {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   overflow: hidden;
+  outline: 1px solid red;
 }
 .block > div {
   width: 700px;
@@ -86,7 +87,6 @@ h1, h2, h3, h4, h5, h6 {
   z-index: 1;
 }
 .block > div:nth-child(2) {
-  position: relative;
   left: -100%;
   background-color: rgb(255, 255, 255);
   -webkit-clip-path: polygon(65% 0%, 100% 50%, 65% 100%, 0% 100%, 35% 50%, 0% 0%);
@@ -95,13 +95,18 @@ h1, h2, h3, h4, h5, h6 {
   z-index: 2;
 }
 .block > div:nth-child(3) {
-  width: 104vw;
-  left: -130%;
-  background: url("https://planetofhotels.com/guide/sites/default/files/styles/node__blog_post__bp_banner/public/2020-06/Exotic-tropical-beach-sunse.jpg") 100% 100%/cover;
+  width: 80vw;
+  left: -102%;
+  background: url("https://planetofhotels.com/guide/sites/default/files/styles/node__blog_post__bp_banner/public/2020-06/Exotic-tropical-beach-sunse.jpg") 100% 50%/cover;
   transition: all 0.18s ease-in-out;
   z-index: 0;
 }
 
+@media (max-width: 1160px) {
+  .block > div:nth-child(3) {
+    left: -130%;
+  }
+}
 .line {
   top: 6%;
   height: 50%;
