--- a/Sites/site 2/#source/style.scss
+++ b/Sites/site 2/#source/style.scss
@@ -36,14 +36,14 @@
    }
 }
 
- .line{
+.line{
+   position: absolute;
+   background-color: white;
    top: 6%;
-   height: 50%;
+   bottom: 50%;
    right: 35%;
    width: 2px;
-   background-color: white;
-   position: absolute;
-   transform: rotate(-45deg); 
- }
+   transform: rotate(-45deg);
+}
 
 
