--- a/Sites/site 2/#source/style.scss
+++ b/Sites/site 2/#source/style.scss
@@ -2,23 +2,26 @@
  @import "nullstyle.scss";
 
  .block{
-   height: 500px;
+   height: 600px;
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    overflow: hidden;
-   outline: 1px solid red;
    >div{
       width: 700px;
-      background-color: #333;
+      background-color: rgba(150, 92, 173, 0.712);
       position: relative;
       left: -50%;
       z-index: 1;
       &:nth-child(2){
          left: -100%;
-         background-color: rgb(255, 255, 255);
+         background-color: rgb(248, 226, 239);
          clip-path: polygon(65% 0%, 100% 50%, 65% 100%, 0% 100%, 35% 50%, 0% 0%);
          width: 700px;
          z-index: 2;
+         display: grid;
+         align-items: center;
+         justify-items: center;
+         padding: 0 60px;
       }
       &:nth-child(3){
          width: 80vw;
@@ -38,12 +41,49 @@
 
 .line{
    position: absolute;
-   background-color: white;
+   background-color: rgb(255, 255, 255);
    top: 6%;
    bottom: 50%;
    right: 35%;
    width: 2px;
-   transform: rotate(-45deg);
+   transform: rotate(-39deg);
 }
 
-
+.margin *:not(.margin){
+   margin-bottom: 50px;
+}
+.margin{
+   margin-left: 107px;
+   &:first-child{
+      margin-top: 23px;
+   }
+}
+.item{
+   font-size: 14px;
+   max-width: 300px;
+   position: relative;
+   padding-left: 20px;
+   letter-spacing: 1px;
+   color: rgb(95, 5, 83);
+   &::before{
+      content: '';
+      position: absolute;
+      width: 3px;
+      left: 0;
+      top: -20px;
+      height: 40px;
+      background-color: rgba(150, 92, 173, 0.712);
+      border-radius: 10px;
+   }
+}
+.title{
+   font-size: 32px;
+   text-transform: uppercase;
+   letter-spacing: 10px;
+   color: rgb(95, 5, 83);
+   & span:last-child{
+      display: block;
+      margin-left: 30px;
+      color:rgba(150, 92, 173, 0.712);
+   }
+}
