--- a/Sites/site 2/css/style.css
+++ b/Sites/site 2/css/style.css
@@ -73,26 +73,29 @@ h1, h2, h3, h4, h5, h6 {
 
 /*--------------------*/
 .block {
-  height: 500px;
+  height: 600px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   overflow: hidden;
-  outline: 1px solid red;
 }
 .block > div {
   width: 700px;
-  background-color: #333;
+  background-color: rgba(150, 92, 173, 0.712);
   position: relative;
   left: -50%;
   z-index: 1;
 }
 .block > div:nth-child(2) {
   left: -100%;
-  background-color: rgb(255, 255, 255);
+  background-color: rgb(248, 226, 239);
   -webkit-clip-path: polygon(65% 0%, 100% 50%, 65% 100%, 0% 100%, 35% 50%, 0% 0%);
           clip-path: polygon(65% 0%, 100% 50%, 65% 100%, 0% 100%, 35% 50%, 0% 0%);
   width: 700px;
   z-index: 2;
+  display: grid;
+  align-items: center;
+  justify-items: center;
+  padding: 0 60px;
 }
 .block > div:nth-child(3) {
   width: 80vw;
@@ -109,10 +112,52 @@ h1, h2, h3, h4, h5, h6 {
 }
 .line {
   position: absolute;
-  background-color: white;
+  background-color: rgb(255, 255, 255);
   top: 6%;
   bottom: 50%;
   right: 35%;
   width: 2px;
-  transform: rotate(-45deg);
+  transform: rotate(-39deg);
+}
+
+.margin *:not(.margin) {
+  margin-bottom: 50px;
+}
+
+.margin {
+  margin-left: 107px;
+}
+.margin:first-child {
+  margin-top: 23px;
+}
+
+.item {
+  font-size: 14px;
+  max-width: 300px;
+  position: relative;
+  padding-left: 20px;
+  letter-spacing: 1px;
+  color: rgb(95, 5, 83);
+}
+.item::before {
+  content: "";
+  position: absolute;
+  width: 3px;
+  left: 0;
+  top: -20px;
+  height: 40px;
+  background-color: rgba(150, 92, 173, 0.712);
+  border-radius: 10px;
+}
+
+.title {
+  font-size: 32px;
+  text-transform: uppercase;
+  letter-spacing: 10px;
+  color: rgb(95, 5, 83);
+}
+.title span:last-child {
+  display: block;
+  margin-left: 30px;
+  color: rgba(150, 92, 173, 0.712);
 }
