--- a/Sites/site 2/#source/style.scss
+++ b/Sites/site 2/#source/style.scss
@@ -8,7 +8,7 @@
    overflow: hidden;
    >div{
       width: 700px;
-      background-color: rgba(150, 92, 173, 0.712);
+      background-color: rgb(150, 92, 173);
       position: relative;
       left: -50%;
       z-index: 1;
