--- a/HomeWork sites/binary/binary/css/style.css
+++ b/HomeWork sites/binary/binary/css/style.css
@@ -73,3 +73,23 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /*--------------------*/
+.wrapper {
+  width: 100%;
+  min-width: 100%;
+  overflow: hidden;
+  flex-direction: column;
+}
+
+.mainblock {
+  flex: 1 1 auto;
+  position: relative;
+  justify-content: center;
+  align-items: center;
+}
+.mainblock__image {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
