--- a/HomeWork sites/aod/aod/#source/scss/nullstyle.scss
+++ b/HomeWork sites/aod/aod/#source/scss/nullstyle.scss
@@ -3,10 +3,10 @@
 *,*:before,*:after{-moz-box-sizing: border-box;-webkit-box-sizing: border-box;box-sizing: border-box;}
 :focus,:active{outline: none;}
 a:focus,a:active{outline: none;}
-nav,footer,header,aside{display: block;}
+nav,footer,header,aside,footer,section{display: block;}
 html,body{height:100%;width:100%;}
-body{font-size:100%;line-height:1;font-size:14px; font-family: $fontfamily; -ms-text-size-adjust:100%;-moz-text-size-adjust:100%;-webkit-text-size-adjust:100%;}
-input,button,textarea{font-family:inherit;}
+body{font-size:100%;line-height:1;font-size:14px;font-family: $fontfamily; -ms-text-size-adjust:100%;-moz-text-size-adjust:100%;-webkit-text-size-adjust:100%;}
+input,button,textarea{font-family:$fontfamily}
 input::-ms-clear{display: none;}
 button{cursor: pointer;}
 button::-moz-focus-inner{padding:0;border:0;}
