--- a/HomeWork sites/aod/aod/css/style.css
+++ b/HomeWork sites/aod/aod/css/style.css
@@ -19,7 +19,7 @@ a:focus, a:active {
   outline: none;
 }
 
-nav, footer, header, aside {
+nav, footer, header, aside, footer, section {
   display: block;
 }
 
@@ -39,7 +39,7 @@ body {
 }
 
 input, button, textarea {
-  font-family: inherit;
+  font-family: "Lato";
 }
 
 input::-ms-clear {
@@ -85,4 +85,25 @@ h1, h2, h3, h4, h5, h6 {
 .conteiner {
   max-width: 1130px;
   padding: 0 15px;
+}
+
+.page {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  flex-direction: column;
+}
+
+.main-screen {
+  flex: 1 0 100%;
+  position: relative;
+}
+.main-screen__bg {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
 }
