--- a/HomeWork sites/aod/aod/css/style.css
+++ b/HomeWork sites/aod/aod/css/style.css
@@ -87,6 +87,15 @@ h1, h2, h3, h4, h5, h6 {
   padding: 0 15px;
 }
 
+.ibg {
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+.ibg img {
+  display: none;
+}
+
 .page {
   position: absolute;
   width: 100%;
