--- a/HomeWork sites/aod/aod/css/style.css
+++ b/HomeWork sites/aod/aod/css/style.css
@@ -26,6 +26,7 @@ nav, footer, header, aside, footer, section {
 html, body {
   height: 100%;
   width: 100%;
+  font-family: "Lato";
 }
 
 body {
@@ -73,7 +74,7 @@ img {
 
 h1, h2, h3, h4, h5, h6 {
   font-size: inherit;
-  font-weight: inherit;
+  font-weight: 400;
 }
 
 /*--------------------*/
@@ -85,6 +86,7 @@ h1, h2, h3, h4, h5, h6 {
 .conteiner {
   max-width: 1130px;
   padding: 0 15px;
+  margin: 0 auto;
 }
 
 .ibg {
@@ -102,6 +104,7 @@ h1, h2, h3, h4, h5, h6 {
   height: 100%;
   top: 0;
   left: 0;
+  display: flex;
   flex-direction: column;
 }
 
