--- a/HomeWork sites/aod/aod/css/style.css
+++ b/HomeWork sites/aod/aod/css/style.css
@@ -98,6 +98,15 @@ h1, h2, h3, h4, h5, h6 {
   display: none;
 }
 
+.header {
+  position: absolute;
+  width: 100%;
+  z-index: 50;
+}
+.header__row {
+  justify-content: center;
+  align-items: center;
+}
 .page {
   position: absolute;
   width: 100%;
