--- a/HomeWork sites/aod/aod/#source/scss/header.scss
+++ b/HomeWork sites/aod/aod/#source/scss/header.scss
@@ -33,12 +33,27 @@
    &__list {
       display: flex;
       li{
+         position: relative;
          padding: 0 37.5px;
          &:nth-child(2){
             padding: 0 110px 0 37.5px;
          }
          &:nth-child(3){
             padding: 0 37.5px 0 110px ;
+         }
+         &:after{
+            content: '';
+            width: 2px;
+            height: 2px;
+            background-color: #4d4959;
+            border-radius: 50%;
+            position: absolute;
+            right: 0;
+            top: 50%;
+            margin: -1.5px 0 0 0;
+         }
+         &:nth-child(2),&:last-child{
+            &:after{display: none;}
          }
       }
    }
