--- a/HomeWork sites/aod/aod/#source/scss/header.scss
+++ b/HomeWork sites/aod/aod/#source/scss/header.scss
@@ -19,7 +19,11 @@
       position: absolute;
       left: 50%;
       top: 0;
+      z-index: 2;
       @include tr(-50%,0px,0px);
+   }
+   @media (max-width: 767px){
+      top: 15px;
    }
 }
 .menu {
@@ -28,6 +32,7 @@
    }
 
    &__body {
+
    }
 
    &__list {
@@ -58,11 +63,89 @@
       }
    }
 
-   &__list {
+   &__link {
       font-size: 13px;
       text-transform: uppercase;
       font-weight: 700;
       letter-spacing: 0.2em;
       color: #4d4959;
+   }
+
+   @media (max-width: 767px){
+      &__body{
+         position: fixed;
+         width: 100%;
+         height: 100%;
+         top: 0;
+         left: 0;
+         overflow: auto;
+         background-color: #4d4959;
+         padding: 150px 0 20px 0;
+         @include tr(0px, -100%, 0px);
+         @include anim(0.3s, 0s);
+         &.active{@include tr(0,0,0);}
+      }
+      &__list{
+         flex-direction: column;
+         justify-content: center;
+         align-items: center;
+         li{
+            padding: 0 0 45px 0;
+            &:nth-child(2),&:nth-child(3){
+               padding: 0 0 45px 0;
+               &::after{
+                  display: block;
+               }
+            }
+            &:last-child{
+               padding: 0;
+            }
+            &:after{
+               width: 4px;
+               height: 4px;
+               background-color: #fff;
+               right: 50%;
+               top: 40px;
+               margin: 0 -2px 0  0;
+            }
+
+         }
+
+      }
+      &__link{
+         color: white;
+         font-size: 20px;
+      }
+   }
+}
+.icon-menu{
+   @media (max-width:767px){
+      display: block;
+      position: absolute;
+      top: 24px;
+      right: 15px;
+      width: 30px;
+      height: 18px;
+      cursor: pointer;
+      z-index: 5;
+      span{
+         @include anim(0.3s,0s);
+          top: 8px;
+          left: 0px;
+          position: absolute;
+          width: 100%;
+          height: 2px;
+          background-color: #4d4959;
+          &:first-child{top: 0px;}
+          &:last-child{top: auto; bottom: 0px;}
+         }
+         &.active{
+            span{
+               background-color: #fff;
+               @include scale(0);
+               &:first-child{@include rotate(-45deg); top: 8px;}
+               &:last-child{@include rotate(45deg); bottom: 8px;}
+            }
+         }
    }
 }
