--- a/HomeWork sites/aod/aod/css/style.css
+++ b/HomeWork sites/aod/aod/css/style.css
@@ -115,7 +115,13 @@ h1, h2, h3, h4, h5, h6 {
   position: absolute;
   left: 50%;
   top: 0;
+  z-index: 2;
   transform: translate3d(-50%, 0px, 0px);
+}
+@media (max-width: 767px) {
+  .header {
+    top: 15px;
+  }
 }
 
 .menu__list {
@@ -145,12 +151,99 @@ h1, h2, h3, h4, h5, h6 {
 .menu__list li:nth-child(2):after, .menu__list li:last-child:after {
   display: none;
 }
-.menu__list {
+.menu__link {
   font-size: 13px;
   text-transform: uppercase;
   font-weight: 700;
   letter-spacing: 0.2em;
   color: #4d4959;
+}
+@media (max-width: 767px) {
+  .menu__body {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    overflow: auto;
+    background-color: #4d4959;
+    padding: 150px 0 20px 0;
+    transform: translate3d(0px, -100%, 0px);
+    transition: all 0.3s ease 0s;
+  }
+  .menu__body.active {
+    transform: translate3d(0, 0, 0);
+  }
+  .menu__list {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .menu__list li {
+    padding: 0 0 45px 0;
+  }
+  .menu__list li:nth-child(2), .menu__list li:nth-child(3) {
+    padding: 0 0 45px 0;
+  }
+  .menu__list li:nth-child(2)::after, .menu__list li:nth-child(3)::after {
+    display: block;
+  }
+  .menu__list li:last-child {
+    padding: 0;
+  }
+  .menu__list li:after {
+    width: 4px;
+    height: 4px;
+    background-color: #fff;
+    right: 50%;
+    top: 40px;
+    margin: 0 -2px 0 0;
+  }
+  .menu__link {
+    color: white;
+    font-size: 20px;
+  }
+}
+
+@media (max-width: 767px) {
+  .icon-menu {
+    display: block;
+    position: absolute;
+    top: 24px;
+    right: 15px;
+    width: 30px;
+    height: 18px;
+    cursor: pointer;
+    z-index: 5;
+  }
+  .icon-menu span {
+    transition: all 0.3s ease 0s;
+    top: 8px;
+    left: 0px;
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    background-color: #4d4959;
+  }
+  .icon-menu span:first-child {
+    top: 0px;
+  }
+  .icon-menu span:last-child {
+    top: auto;
+    bottom: 0px;
+  }
+  .icon-menu.active span {
+    background-color: #fff;
+    transform: scale(0);
+  }
+  .icon-menu.active span:first-child {
+    transform: rotate(-45deg);
+    top: 8px;
+  }
+  .icon-menu.active span:last-child {
+    transform: rotate(45deg);
+    bottom: 8px;
+  }
 }
 
 .page {
