--- a/HomeWork sites/aod/aod/#source/scss/style.scss
+++ b/HomeWork sites/aod/aod/#source/scss/style.scss
@@ -22,6 +22,7 @@ $fontfamily:"Lato";
    max-width: 1130px;
    padding: 0 15px;
    margin: 0 auto;
+
 }
 //</ОСНОВНАЯ СЕТКА>
 
@@ -56,6 +57,110 @@ $fontfamily:"Lato";
          top: 0;
          left: 0;
 		}
+}
+
+.generation {
+   padding: 130px 0;
+   background-color: #f7f7f7;
+   
+	&__block {}
+
+   @media (max-width: 900px){
+      padding: 80px 0;
+   }
+   @media (max-width: 600px){
+      padding: 30px 0;
+   }
+}
+
+.block {
+      text-align: center;
+		&__icon {
+         margin: 0 0 30px 0
+		}
+
+		&__title {
+         font-size: 18px;
+         font-weight: 700;
+         text-transform: uppercase;
+         letter-spacing: 0.2em;
+         line-height: 34px;
+         color: #353738;
+         margin: 0 0 18px 0;
+		}
+
+		&__text {
+         font-size: 18px;
+         line-height: 34px;
+         color: #848789;
+         &_j {
+            text-align: justify;
+            font-size: 16px;
+            line-height: 30px;
+            &:after{
+               display: block;
+               margin: 35px auto 0 auto;
+               content: '';
+               width: 50px;
+               height: 1px;
+               background-color: rgba(53,55,56,0.2);
+            }
+         }
+		}
+}
+
+.brands {
+   
+   &__row {
+      display:  flex;
+   }
+
+   &__column {
+      flex: 0 1 33.333%;
+      &_b {
+         flex: 0 1 67.667%;
+      }
+   }
+
+   &__item {
+   }
+
+   &__content {
+      padding: 70px 65px 55px 65px;
+      position: relative;
+      &:after{
+         content: '';
+         position: absolute;
+         bottom: -10px;
+         left: 50%;
+         margin: 0 0 0 -10px;
+         width: 0;
+         height: 0;
+         border-left: 10px solid transparent;
+         border-right: 10px solid transparent;
+         border-top: 10px solid #fff;
+      }
+   }
+
+   &__image {
+      padding: 0 0 37.51% 0 ;
+   }
+}
+.item {
+   height: 100%;
+   display: block;
+   position: relative;
+
+   &__logo {
+   }
+
+   &__image {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+   }
 }
 
 //</ОСНОВНОЙ БЛОК>
