--- a/HomeWork sites/aod/aod/#source/scss/style.scss
+++ b/HomeWork sites/aod/aod/#source/scss/style.scss
@@ -62,9 +62,6 @@ $fontfamily:"Lato";
 .generation {
    padding: 130px 0;
    background-color: #f7f7f7;
-   
-	&__block {}
-
    @media (max-width: 900px){
       padding: 80px 0;
    }
@@ -107,16 +104,33 @@ $fontfamily:"Lato";
             }
          }
 		}
+      @media (max-width: 1500px){
+         &__text{
+            &_j{
+               &:after{
+                  margin: 15px auto 0 auto;
+               }
+            }
+         }
+      }
 }
 
 .brands {
+   &_rev{
+      .brands__column{
+         @include flexorder(1);
+         &_b{
+            @include flexorder(2);
+         }
+      }
+   }
    
    &__row {
       display:  flex;
    }
 
    &__column {
-      flex: 0 1 33.333%;
+      flex: 0 1 33.8%;
       &_b {
          flex: 0 1 67.667%;
       }
@@ -141,9 +155,23 @@ $fontfamily:"Lato";
          border-top: 10px solid #fff;
       }
    }
-
    &__image {
       padding: 0 0 37.51% 0 ;
+   }
+   &__block{
+      height: 100%;
+      display: block;
+      position: relative;
+   }
+   @media (max-width: 1500px){
+      &__content{
+         padding: 40px 35px 30px 35px;
+      }
+   }
+   @media (max-width: 1100px){
+      &__row{
+         flex-direction: column;
+      }
    }
 }
 .item {
@@ -152,6 +180,19 @@ $fontfamily:"Lato";
    position: relative;
 
    &__logo {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      display: flex;
+      @include anim(0.3s,0s);
+      justify-content: center;
+      align-items: center;
+      background-color: rgba(100,194,158,0.4);
+      z-index: 2;
+      opacity: 0;
+      visibility: hidden;
    }
 
    &__image {
@@ -160,6 +201,16 @@ $fontfamily:"Lato";
       height: 100%;
       top: 0;
       left: 0;
+   }
+   &:hover{
+      .item__logo{
+         opacity: 1;
+         visibility: visible;
+      }
+   }
+   @media (max-width: 1100px){
+      height: auto;
+      padding: 0 0 70% 0;
    }
 }
 
