--- a/HomeWork sites/aod/aod/css/style.css
+++ b/HomeWork sites/aod/aod/css/style.css
@@ -316,12 +316,23 @@ h1, h2, h3, h4, h5, h6 {
   height: 1px;
   background-color: rgba(53, 55, 56, 0.2);
 }
+@media (max-width: 1500px) {
+  .block__text_j:after {
+    margin: 15px auto 0 auto;
+  }
+}
 
+.brands_rev .brands__column {
+  order: 1;
+}
+.brands_rev .brands__column_b {
+  order: 2;
+}
 .brands__row {
   display: flex;
 }
 .brands__column {
-  flex: 0 1 33.333%;
+  flex: 0 1 33.8%;
 }
 .brands__column_b {
   flex: 0 1 67.667%;
@@ -345,11 +356,41 @@ h1, h2, h3, h4, h5, h6 {
 .brands__image {
   padding: 0 0 37.51% 0;
 }
+.brands__block {
+  height: 100%;
+  display: block;
+  position: relative;
+}
+@media (max-width: 1500px) {
+  .brands__content {
+    padding: 40px 35px 30px 35px;
+  }
+}
+@media (max-width: 1100px) {
+  .brands__row {
+    flex-direction: column;
+  }
+}
 
 .item {
   height: 100%;
   display: block;
   position: relative;
+}
+.item__logo {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  display: flex;
+  transition: all 0.3s ease 0s;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(100, 194, 158, 0.4);
+  z-index: 2;
+  opacity: 0;
+  visibility: hidden;
 }
 .item__image {
   position: absolute;
@@ -357,4 +398,14 @@ h1, h2, h3, h4, h5, h6 {
   height: 100%;
   top: 0;
   left: 0;
+}
+.item:hover .item__logo {
+  opacity: 1;
+  visibility: visible;
+}
+@media (max-width: 1100px) {
+  .item {
+    height: auto;
+    padding: 0 0 70% 0;
+  }
 }
