--- a/HomeWork sites/aod/aod/#source/scss/style.scss
+++ b/HomeWork sites/aod/aod/#source/scss/style.scss
@@ -124,7 +124,7 @@ $fontfamily:"Lato";
          }
       }
    }
-   
+
    &__row {
       display:  flex;
    }
@@ -135,10 +135,7 @@ $fontfamily:"Lato";
          flex: 0 1 67.667%;
       }
    }
-
-   &__item {
-   }
-
+   
    &__content {
       padding: 70px 65px 55px 65px;
       position: relative;
@@ -169,6 +166,19 @@ $fontfamily:"Lato";
       }
    }
    @media (max-width: 1100px){
+      &_last{
+         .brands__column{
+            &:nth-child(1){
+               @include flexorder(2);
+            }
+            &:nth-child(2){
+               @include flexorder(1);
+            }
+            &:nth-child(3){
+               @include flexorder(3);
+            }
+         }
+      }
       &__row{
          flex-direction: column;
       }
@@ -212,6 +222,28 @@ $fontfamily:"Lato";
       height: auto;
       padding: 0 0 70% 0;
    }
+}
+
+//Slider
+.slider {
+   background-color: #f7f7f7;
+   padding: 120px 0;
+   &__body {
+   }
+
+   &__item {
+   }
+
+   &__icon {
+   }
+
+   &__title {
+   }
+
+   &__text {
+   }
+}
+.container {
 }
 
 //</ОСНОВНОЙ БЛОК>
