--- a/HomeWork sites/aod/aod/css/style.css
+++ b/HomeWork sites/aod/aod/css/style.css
@@ -367,6 +367,15 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 @media (max-width: 1100px) {
+  .brands_last .brands__column:nth-child(1) {
+    order: 2;
+  }
+  .brands_last .brands__column:nth-child(2) {
+    order: 1;
+  }
+  .brands_last .brands__column:nth-child(3) {
+    order: 3;
+  }
   .brands__row {
     flex-direction: column;
   }
@@ -408,4 +417,9 @@ h1, h2, h3, h4, h5, h6 {
     height: auto;
     padding: 0 0 70% 0;
   }
+}
+
+.slider {
+  background-color: #f7f7f7;
+  padding: 120px 0;
 }
