--- a/HomeWork sites/aod/aod/#source/scss/ui.scss
+++ b/HomeWork sites/aod/aod/#source/scss/ui.scss
@@ -4,3 +4,18 @@
    background-position: center;
    img{display: none;}
 }
+.slick-slider{
+   position: relative;
+   .slick-track, .slick-list {}
+   .slick-list{overflow: hidden;}
+   .slick-track{display: flex; align-items: flex-start;}
+   .slick-slide{}
+   .slick-dots{
+      li{
+         button{}
+         &.slick-active{
+            button{}
+         }
+      }
+   }
+}
