--- a/HomeWork sites/aod/aod/css/ui.css
+++ b/HomeWork sites/aod/aod/css/ui.css
@@ -6,3 +6,14 @@
 .ibg img {
   display: none;
 }
+
+.slick-slider {
+  position: relative;
+}
+.slick-slider .slick-list {
+  overflow: hidden;
+}
+.slick-slider .slick-track {
+  display: flex;
+  align-items: flex-start;
+}
