--- a/HomeWork sites/aod/aod/#source/scss/ui.scss
+++ b/HomeWork sites/aod/aod/#source/scss/ui.scss
@@ -4,6 +4,7 @@
    background-position: center;
    img{display: none;}
 }
+/*
 .slick-slider{
    position: relative;
    .slick-track, .slick-list {}
@@ -11,11 +12,24 @@
    .slick-track{display: flex; align-items: flex-start;}
    .slick-slide{}
    .slick-dots{
+      display: flex;
+      justify-content: center;
+      align-items: center;
       li{
-         button{}
+         button{
+            font-size: 0;
+            width: 11px;
+            height: 11px;
+            border-radius: 50%;
+            border: 1px solid #c8c8c8;
+            background-attachment: #trancparent;
+         }
          &.slick-active{
-            button{}
+            button{
+               background-color: #a9afb3;
+            }
          }
       }
    }
 }
+*/
