--- a/HomeWork sites/aod/aod/#source/scss/style.scss
+++ b/HomeWork sites/aod/aod/#source/scss/style.scss
@@ -285,9 +285,43 @@ $fontfamily:"Lato";
    }
 
    &__footer {
+      background: #282f35;
+      padding: 77px 0;
+      text-align: center;
    }
 
    &__btn {
+      padding: 0 60px;
+      display: inline-block;
+      height: 50px;
+      line-height: 48px;
+      font-weight: 700;
+      letter-spacing: 2.8px;
+      text-transform: uppercase;
+      letter-spacing: 0.2em;
+      color: #ffffff;
+      background-color: rgba(255,255,255,0.0);
+      border: 1px solid rgba(255,255,255,0.49);
+   }
+   @media (max-width: 1100px){
+      &__body{ 
+         flex-wrap: wrap;
+      }
+      &__column{
+         flex: 0 1 50%;
+         &:first-child{
+            flex: 1 1 100%;
+         }
+         &:last-child{
+            flex: 1 1 100%;
+         }
+      }
+      &__footer {
+         padding: 50px 0;
+      }
+      &__btn {
+         padding: 0 30px;
+      }
    }
 }
 .block-shop {
