--- a/HomeWork sites/aod/aod/css/style.css
+++ b/HomeWork sites/aod/aod/css/style.css
@@ -496,6 +496,45 @@ h1, h2, h3, h4, h5, h6 {
 .shop__column_b {
   flex: 0 1 33.333%;
 }
+.shop__footer {
+  background: #282f35;
+  padding: 77px 0;
+  text-align: center;
+}
+.shop__btn {
+  padding: 0 60px;
+  display: inline-block;
+  height: 50px;
+  line-height: 48px;
+  font-weight: 700;
+  letter-spacing: 2.8px;
+  text-transform: uppercase;
+  letter-spacing: 0.2em;
+  color: #ffffff;
+  background-color: rgba(255, 255, 255, 0);
+  border: 1px solid rgba(255, 255, 255, 0.49);
+}
+@media (max-width: 1100px) {
+  .shop__body {
+    flex-wrap: wrap;
+  }
+  .shop__column {
+    flex: 0 1 50%;
+  }
+  .shop__column:first-child {
+    flex: 1 1 100%;
+  }
+  .shop__column:last-child {
+    flex: 1 1 100%;
+  }
+  .shop__footer {
+    padding: 50px 0;
+  }
+  .shop__btn {
+    padding: 0 30px;
+  }
+}
+
 .block-shop {
   height: 100%;
 }
