--- a/Sites/insite/insite/css/style.css
+++ b/Sites/insite/insite/css/style.css
@@ -99,11 +99,6 @@ h1, h2, h3, h4, h5, h6 {
 .header__row {
   height: 85px;
 }
-.header__logo {
-  position: absolute;
-  left: 50%;
-  top: 0;
-}
 
 .menu__list {
   display: flex;
@@ -118,6 +113,8 @@ h1, h2, h3, h4, h5, h6 {
   position: relative;
   padding: 0 5px;
   display: flex;
+}
+.menu__lang li:first-child {
   flex-direction: row-reverse;
 }
 .menu__lang li:first-child::before {
@@ -131,6 +128,22 @@ h1, h2, h3, h4, h5, h6 {
 }
 .menu__link {
   font-size: 13px;
+}
+.menu__logo {
+  font-weight: 700;
+  position: relative;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+.menu__logo::before {
+  content: "";
+  width: 21px;
+  height: 21px;
+  background-color: black;
+  border-radius: 50%;
+  position: absolute;
+  right: 0%;
+  top: -21%;
+  margin: 0 40px 0;
 }
 .menu__about {
   display: flex;
