--- a/Sites/insite/insite/#source/scss/style.scss
+++ b/Sites/insite/insite/#source/scss/style.scss
@@ -38,10 +38,18 @@ $fontfamily:"IBM Plex Mono";
    left: 0;
    top: 35px;
    &__row {
-      height: 85px;
+      height: 29px;
+      max-width: 1200px;
+      padding: 0px 0px 0px 0px;
+      margin: 0px auto;
+      border-bottom: solid;
    }
 }
 .menu {
+   &__list{
+
+
+   }
    &__list {
       display: flex;
       justify-content: space-around;
@@ -81,8 +89,8 @@ $fontfamily:"IBM Plex Mono";
       filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
       &::before{
          content: '';
-         width: 21px;
-         height: 21px;
+         width: 19px;
+         height: 19px;
          background-color: black;
          border-radius: 50%;
          position: absolute;
